--- a/index.html
+++ b/index.html
@@ -90,6 +90,27 @@
                </a>                                
             </div>
            </section>
+           <!-- SECTION 1 END -->
+           <!-- SCROLL BTN START -->
+            <div class="d-flex align-items-center justify-content-center">
+                <a href="#about" class="text-decoration-none scroll-img">
+                   <img src="./assets/image/download (1).png" alt="" class="img-fluid">
+                </a>
+            </div>
+            <!-- SCROLL BTN END -->
+             <!-- SECTION 2 START  -->
+              <section class="section-dishes">
+                <div class="container">
+                    <div class="text-center dishes-title">
+                        <h3 class="mb-0">
+                            Every day we prepare dishes <br> from around the world
+                        </h3>
+                    </div>
+                    <div class="row gy-4">
+                        
+                    </div>
+                </div>
+              </section>
       </main>
 
 
