--- a/index.html
+++ b/index.html
@@ -310,28 +310,96 @@
                     <br> You will be pleasantly surprised!
                 </h2>
                 <div class="prices-content pt-5">
-                    <div class="row gx-5">
+                    <div class="row gx-5 gy-4">
                         <div class="col-lg-4">
                             <div class="meal">
-                                <h6 class="fs-2">Single meal</h6>
+                                <h6 class="fs-2 pb-3">Single <br>
+                                    meal</h6>
+                               <p class="pb-3">
+                                   <span class="time">from</span>
+                                 <span class="price pe-2">$10</span>
+                               </p>
+                               <h5 class="pb-5">
+                                Ut ultricies imperdiet sodales. Aliquam fringilla aliquam ex sit amet elementum.
+                            </h5>
+                            <div class="Check-blue">
+                                <i class="ri-check-line"></i>
+                                <span> Morbi tempor et</span>
+                            </div>
+                            <div class="Check-dissebled">
+                                <i class="ri-check-line"></i>
+                                <span>  Vehicula dolor fin</span>
+                            </div>
+                            <div class="Check-dissebled pb-5">
+                                <i class="ri-close-line"></i>
+                                <span>  Vitae eros fermet</span>
+                            </div>
+                            <div class="package-btn pt-3 pb-5">
+                                <a href="#start">
+                                    <button>CHOOSE THIS PACKAGE </button>
+                                </a>
+                            </div>
                             </div>
                         </div>
                         <div class="col-lg-4">
                             <div class="meal daily-meal">
-                                <h6 class="fs-2 pb-3">Daily meal</h6>
+                                <h6 class="fs-2 pb-3">Daily <br> meal</h6>
                                <p class="pb-3">
                                  <span class="price pe-2">$189</span>
                                 <span class="time">monthly</span>
                                </p>
-                               <h5>
+                               <h5 class="pb-5">
                                 Ut ultricies imperdiet sodales. Aliquam fringilla aliquam ex sit amet elementum.
                             </h5>
+                            <div class="Check">
+                                <i class="ri-check-line"></i>
+                                <span> Morbi tempor et</span>
+                            </div>
+                            <div class="Check">
+                                <i class="ri-check-line"></i>
+                                <span>  Vehicula dolor fin</span>
+                            </div>
+                            <div class="Check-disseble pb-5">
+                                <i class="ri-close-line"></i>
+                                <span>  Vitae eros fermet</span>
+                            </div>
+                            <div class="package-btn pt-3 pb-5">
+                                <a href="#start">
+                                    <button>CHOOSE THIS PACKAGE </button>
+                                </a>
+                            </div>
                             </div>
                         </div>
                         <div class="col-lg-4">
                             <div class="meal">
-                                <h6 class="fs-2">Single meal</h6>
+                                <h6 class="fs-2 pb-3">Party <br>
+                                    catering</h6>
+                               <p class="pb-3">
+                                 <span class="price pe-2">$189</span>
+                                <span class="time">monthly</span>
+                               </p>
+                               <h5 class="pb-5">
+                                Ut ultricies imperdiet sodales. Aliquam fringilla aliquam ex sit amet elementum.
+                            </h5>
+                            <div class="Check-blue">
+                                <i class="ri-check-line"></i>
+                                <span> Morbi tempor et</span>
                             </div>
+                            <div class="Check-blue">
+                                <i class="ri-check-line"></i>
+                                <span>  Vehicula dolor fin</span>
+                            </div>
+                            <div class="Check-blue pb-5">
+                                <i class="ri-check-line"></i>
+                                <span>  Vitae eros fermet</span>
+                            </div>
+                            <div class="package-btn pt-3 pb-5">
+                                <a href="#start">
+                                    <button>CHOOSE THIS PACKAGE </button>
+                                </a>
+                            </div>
+                            </div>
+                        </div>
                         </div>
                     </div>
                 </div>
