--- a/index.html
+++ b/index.html
@@ -315,96 +315,125 @@
                             <div class="meal">
                                 <h6 class="fs-2 pb-3">Single <br>
                                     meal</h6>
-                               <p class="pb-3">
-                                   <span class="time">from</span>
-                                 <span class="price pe-2">$10</span>
-                               </p>
-                               <h5 class="pb-5">
-                                Ut ultricies imperdiet sodales. Aliquam fringilla aliquam ex sit amet elementum.
-                            </h5>
-                            <div class="Check-blue">
-                                <i class="ri-check-line"></i>
-                                <span> Morbi tempor et</span>
-                            </div>
-                            <div class="Check-dissebled">
-                                <i class="ri-check-line"></i>
-                                <span>  Vehicula dolor fin</span>
-                            </div>
-                            <div class="Check-dissebled pb-5">
-                                <i class="ri-close-line"></i>
-                                <span>  Vitae eros fermet</span>
-                            </div>
-                            <div class="package-btn pt-3 pb-5">
-                                <a href="#start">
-                                    <button>CHOOSE THIS PACKAGE </button>
-                                </a>
-                            </div>
+                                <p class="pb-3">
+                                    <span class="time">from</span>
+                                    <span class="price pe-2">$10</span>
+                                </p>
+                                <h5 class="pb-5">
+                                    Ut ultricies imperdiet sodales. Aliquam fringilla aliquam ex sit amet elementum.
+                                </h5>
+                                <div class="Check-blue">
+                                    <i class="ri-check-line"></i>
+                                    <span> Morbi tempor et</span>
+                                </div>
+                                <div class="Check-dissebled">
+                                    <i class="ri-check-line"></i>
+                                    <span> Vehicula dolor fin</span>
+                                </div>
+                                <div class="Check-dissebled pb-5">
+                                    <i class="ri-close-line"></i>
+                                    <span> Vitae eros fermet</span>
+                                </div>
+                                <div class="package-btn pt-3 pb-5">
+                                    <a href="#start">
+                                        <button>CHOOSE THIS PACKAGE </button>
+                                    </a>
+                                </div>
                             </div>
                         </div>
                         <div class="col-lg-4">
                             <div class="meal daily-meal">
                                 <h6 class="fs-2 pb-3">Daily <br> meal</h6>
-                               <p class="pb-3">
-                                 <span class="price pe-2">$189</span>
-                                <span class="time">monthly</span>
-                               </p>
-                               <h5 class="pb-5">
-                                Ut ultricies imperdiet sodales. Aliquam fringilla aliquam ex sit amet elementum.
-                            </h5>
-                            <div class="Check">
-                                <i class="ri-check-line"></i>
-                                <span> Morbi tempor et</span>
-                            </div>
-                            <div class="Check">
-                                <i class="ri-check-line"></i>
-                                <span>  Vehicula dolor fin</span>
-                            </div>
-                            <div class="Check-disseble pb-5">
-                                <i class="ri-close-line"></i>
-                                <span>  Vitae eros fermet</span>
-                            </div>
-                            <div class="package-btn pt-3 pb-5">
-                                <a href="#start">
-                                    <button>CHOOSE THIS PACKAGE </button>
-                                </a>
-                            </div>
+                                <p class="pb-3">
+                                    <span class="price pe-2">$189</span>
+                                    <span class="time">monthly</span>
+                                </p>
+                                <h5 class="pb-5">
+                                    Ut ultricies imperdiet sodales. Aliquam fringilla aliquam ex sit amet elementum.
+                                </h5>
+                                <div class="Check">
+                                    <i class="ri-check-line"></i>
+                                    <span> Morbi tempor et</span>
+                                </div>
+                                <div class="Check">
+                                    <i class="ri-check-line"></i>
+                                    <span> Vehicula dolor fin</span>
+                                </div>
+                                <div class="Check-disseble pb-5">
+                                    <i class="ri-close-line"></i>
+                                    <span> Vitae eros fermet</span>
+                                </div>
+                                <div class="package-btn pt-3 pb-5">
+                                    <a href="#start">
+                                        <button>CHOOSE THIS PACKAGE </button>
+                                    </a>
+                                </div>
                             </div>
                         </div>
                         <div class="col-lg-4">
                             <div class="meal">
                                 <h6 class="fs-2 pb-3">Party <br>
                                     catering</h6>
-                               <p class="pb-3">
-                                 <span class="price pe-2">$189</span>
-                                <span class="time">monthly</span>
-                               </p>
-                               <h5 class="pb-5">
-                                Ut ultricies imperdiet sodales. Aliquam fringilla aliquam ex sit amet elementum.
-                            </h5>
-                            <div class="Check-blue">
-                                <i class="ri-check-line"></i>
-                                <span> Morbi tempor et</span>
+                                <p class="pb-3">
+                                    <span class="price pe-2">$189</span>
+                                    <span class="time">monthly</span>
+                                </p>
+                                <h5 class="pb-5">
+                                    Ut ultricies imperdiet sodales. Aliquam fringilla aliquam ex sit amet elementum.
+                                </h5>
+                                <div class="Check-blue">
+                                    <i class="ri-check-line"></i>
+                                    <span> Morbi tempor et</span>
+                                </div>
+                                <div class="Check-blue">
+                                    <i class="ri-check-line"></i>
+                                    <span> Vehicula dolor fin</span>
+                                </div>
+                                <div class="Check-blue pb-5">
+                                    <i class="ri-check-line"></i>
+                                    <span> Vitae eros fermet</span>
+                                </div>
+                                <div class="package-btn pt-3 pb-5">
+                                    <a href="#start">
+                                        <button>CHOOSE THIS PACKAGE </button>
+                                    </a>
+                                </div>
                             </div>
-                            <div class="Check-blue">
-                                <i class="ri-check-line"></i>
-                                <span>  Vehicula dolor fin</span>
-                            </div>
-                            <div class="Check-blue pb-5">
-                                <i class="ri-check-line"></i>
-                                <span>  Vitae eros fermet</span>
-                            </div>
-                            <div class="package-btn pt-3 pb-5">
-                                <a href="#start">
-                                    <button>CHOOSE THIS PACKAGE </button>
-                                </a>
-                            </div>
-                            </div>
-                        </div>
                         </div>
                     </div>
                 </div>
             </div>
+            </div>
         </Section>
+        <!-- SECTION 5 END -->
+        <!-- SECTION 6 START -->
+        <section class="about-chef-section" id="chef">
+            <div class="chef-img">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <div class="chef-content text-end">
+                            <h2 class="pb-4 fs-1">A few words about <br> our chef</h2>
+                            <p class="pb-3">Sed ultrices nisl velit, eu ornare est ullamcorper a. Nunc quis <br> nibh magna. Proin risus erat, fringilla vel purus sit amet, <br> mattis porta enim. Duis fermentum faucibus est, sed <br> vehicula velit sodales vitae. Mauris mollis.</p>
+                            <ul class="list-unstyled mb-5">
+                                <li class="pb-3">
+                                    <img src="./assets/image/download (2).png" alt="">
+                                    <span>Nulla ornare, sem eusarto maximus</span>
+                                </li>
+                                <li class="pb-3">
+                                    <img src="./assets/image/download (2).png" alt="">
+                                    <span>In blandit gravida magna vel maximus</span>
+                                </li>
+                            </ul>
+                            <a href="#gallery">
+                                <button>
+                                    SEE PHOTO GALLERY
+                                </button>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
     </main>
 
