--- a/index.html
+++ b/index.html
@@ -532,57 +532,50 @@
             </div>
         </section>
         <!-- SECTION 8 END -->
-        <!-- FOOTER START -->
-        <footer class="footer-section">
-            <div class="footer">
-                <div class="container">
-                    <div class="row gx-5 gy-4">
-                        <div class="col-lg-4 text-center">
-                            <div class="logo-img">
-                                <img src="./assets/image/download.png" alt="" width="151px">
-                            </div>
+    </main>
+    <!-- MAIN END -->
+     <!-- FOOTER START -->
+     <footer class="footer-section">
+        <div class="footer">
+            <div class="container">
+                <div class="row gx-5 gy-4">
+                    <div class="col-lg-4 text-center">
+                        <div class="logo-img">
+                            <img src="./assets/image/download.png" alt="" width="151px">
                         </div>
-                        <div class="col-lg-4">
-                            <div class="footer-content text-center">
-                                <h5 class="fs-1 pb-5">Dear guests!</h5>
-                                <h6 class="fs-2 pb-2">We are open 7 days a</h6>
-                                <h6 class="fs-2 pb-5">week 9:00 - 20:30</h6>
-                                <p>Need help? Call us</p>
-                                <h5 class="fs-1">+61 (0) 383 766 284</h5>
-                            </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="footer-content text-center">
+                            <h5 class="fs-1 pb-5">Dear guests!</h5>
+                            <h6 class="fs-2 pb-2">We are open 7 days a</h6>
+                            <h6 class="fs-2 pb-5">week 9:00 - 20:30</h6>
+                            <p>Need help? Call us</p>
+                            <h5 class="fs-1">+61 (0) 383 766 284</h5>
                         </div>
-                        <div class="col-lg-4">
-                            <div class="d-flex gap-3 justify-content-center">
-                                <div class="footer-icon">
-                                    <i class="ri-twitter-line"></i>
-                                </div>
-                                <div class="footer-icon">
-                                    <i class="ri-facebook-line"></i>
-                                </div>
-                                <div class="footer-icon">
-                                    <i class="ri-skype-line"></i>
-                                </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="d-flex gap-3 justify-content-center">
+                            <div class="footer-icon">
+                                <i class="ri-twitter-line"></i>
+                            </div>
+                            <div class="footer-icon">
+                                <i class="ri-facebook-line"></i>
+                            </div>
+                            <div class="footer-icon">
+                                <i class="ri-skype-line"></i>
                             </div>
                         </div>
                     </div>
                 </div>
-                <hr>
             </div>
             <hr>
-          <div class="text-center footer-last">
-            <h6 class="pb-4">© 2019 BeCatering 2 - BeTheme. Muffin group - HTML by BeantownThemes</h6>
-          </div>
-        </footer>
-
-
-    </main>
-
-
-
-
-
-
-
+        </div>
+        <hr>
+      <div class="text-center footer-last">
+        <h6 class="pb-4">© 2019 BeCatering 2 - BeTheme. Muffin group - HTML by BeantownThemes</h6>
+      </div>
+    </footer>
+    <!-- FOOTER END -->
     <!-- OFF CANVAS START -->
     <div class="offcanvas offcanvas-end offcanvas-style" tabindex="-1" id="offcanvasExample"
         aria-labelledby="offcanvasExampleLabel">
@@ -618,7 +611,7 @@
                     <a href="#gallery" id="Gallery" class="text-decoration-none">
                         <li class="pb-3 pt-2">Gallery</li>
                     </a>
-                    <a href="contact" id="contact" class="text-decoration-none">
+                    <a href="#contact" id="contact" class="text-decoration-none">
                         <li class="pb-3 pt-2">Contact</li>
                     </a>
                 </ul>
