--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Be</title>
+    <link rel="shortcut icon" href="./assets/image/favicon.ico">
     <!-- FANCYBOX CSS -->
     <link rel="stylesheet" href="./assets/css/fancybox.css">
     <!-- REMIX ICON CDN -->
