--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <body>
     <!-- HEADER START -->
-    <header class="header d-flex align-items-center fixed-top">
+    <header class="header fixed-top">
         <div class="container-fluid  position-relative d-flex align-items-center justify-content-between">
             <img src="./assets/image/download.png" alt="" width="151px" height="">
             <nav class="navmenu">
@@ -69,6 +69,7 @@
             </div>
         </div>
     </header>
+    
     <!-- HEADER END -->
     <!-- MAIN START -->
     <main class="d-block">
@@ -307,7 +308,7 @@
         </section>
         <!-- SECTION 4 END -->
         <!-- SECTION 5 START -->
-        <Section class="prices-section" id="prices">
+        <section class="prices-section" id="prices">
             <div class="container text-center prices">
                 <h2 class="fs-1">Check our prices
                     <br> You will be pleasantly surprised!
@@ -407,11 +408,11 @@
                 </div>
             </div>
             </div>
-        </Section>
+        </section>
         <!-- SECTION 5 END -->
         <!-- SECTION 6 START -->
         <section class="about-chef-section" id="chef">
-            <div class="chef-img">
+            <div class="chef-img container-fluid">
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="chef-content text-end">
@@ -569,12 +570,7 @@
                     </div>
                 </div>
             </div>
-            <hr>
         </div>
-        <hr>
-      <div class="text-center footer-last">
-        <h6 class="pb-4">© 2019 BeCatering 2 - BeTheme. Muffin group - HTML by BeantownThemes</h6>
-      </div>
     </footer>
     <!-- FOOTER END -->
     <!-- OFF CANVAS START -->
